[package]
name = "fast-fuzzy-search"
version = "0.1.0"
edition = "2018"
authors = ["Chris lee"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzy-matcher = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
[dependencies.web-sys]
version = "0.3"
features = ['console']
